@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2000 - 2011 Silverpeas
+ * Copyright (C) 2000 - 2012 Silverpeas
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -11,7 +11,7 @@
  * Open Source Software ("FLOSS") applications as described in Silverpeas's
  * FLOSS exception.  You should have received a copy of the text describing
  * the FLOSS exception, and it is also available here:
- * "http://repository.silverpeas.com/legal/licensing"
+ * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -24,7 +24,8 @@
 
 package com.silverpeas.rssAgregator.control;
 
-import java.util.Hashtable;
+import java.util.HashMap;
+import java.util.Map;
 
 import com.silverpeas.rssAgregator.model.SPChannel;
 import com.silverpeas.rssAgregator.model.SPChannelPK;
@@ -41,16 +42,16 @@ public class RssAgregatorCache {
   // instance of RssAgregatorCache singleton
   private static RssAgregatorCache instance = null;
   // content of cache
-  private Hashtable<SPChannelPK, SPChannel> cache = new Hashtable<SPChannelPK, SPChannel>();
+  private Map<SPChannelPK, SPChannel> cache = new HashMap<SPChannelPK, SPChannel>();
   // informations about cache refresh
-  private Hashtable<SPChannelPK, Long> cacheNextRefresh = new Hashtable<SPChannelPK, Long>();
+  private Map<SPChannelPK, Long> cacheNextRefresh = new HashMap<SPChannelPK, Long>();
 
   /**
    * Default constructor
    */
   private RssAgregatorCache() {
-    ResourceLocator res = new ResourceLocator(
-        "com.silverpeas.rssAgregator.settings.rssAgregatorSettings", "");
+    ResourceLocator res =
+        new ResourceLocator("com.silverpeas.rssAgregator.settings.rssAgregatorSettings", "");
     String refreshRate = res.getString("refreshRate");
     REFRESH_RATE = (60 * 1000) * Long.valueOf(refreshRate).longValue();
   }
@@ -58,7 +59,7 @@ public class RssAgregatorCache {
   /**
    * Get an instance of RssAgregatorCache
    */
-  public final static RssAgregatorCache getInstance() {
+  public static final RssAgregatorCache getInstance() {
     if (instance == null) {
       instance = new RssAgregatorCache();
     }
@@ -85,11 +86,10 @@ public class RssAgregatorCache {
     long currentTime = System.currentTimeMillis();
     int refreshRate = spChannel.getRefreshRate() * 60 * 1000; // refresh rate in
     // ms
-    cacheNextRefresh.put(key, new Long(currentTime + refreshRate));
+    cacheNextRefresh.put(key, Long.valueOf(currentTime + refreshRate));
   }
 
   /**
-   * 
    * @param key of the channel to remove from the cache
    */
   public void removeChannelFromCache(SPChannelPK key) {
@@ -106,7 +106,7 @@ public class RssAgregatorCache {
       return true;
     } else {
       // verify if the content has been refreshed at the refresh rate
-      long timeOfNextRefresh = ((Long) cacheNextRefresh.get(key)).longValue();
+      long timeOfNextRefresh = cacheNextRefresh.get(key);
       long currentTime = System.currentTimeMillis();
       return currentTime > timeOfNextRefresh;
     }
